# tomathml

./: .gitignore  CMakeLists.txt  README.rst  pyproject.toml
.github/scripts/: install_doxygen.ps1  install_doxygen.sh
.github/workflows/: newtest.yml  release.yml  test.yml  trigger.yml  wheels.yml
src/: CMakeLists.txt  tomathml.cpp  tomathml.h
src/bindings/: CMakeLists.txt  doxygen_to_nanobind.py
src/cellmltext/: parser.cpp  parser.h  scanner.cpp  scanner.h
src/cmake/: doxyfile.in.config  environmentchecks.cmake  generatednanobindsources.cmake
src/include/: tomathml_export.h
src/utils/: stringhelp.cpp  stringhelp.h  xmllite.cpp  xmllite.h
tests/: CMakeLists.txt  strings.h  test_algebraic.cc  test_odes.cc
